Programmers 강좌 추가

--- a/com/javalec/lab01/.gitignore
+++ b/com/javalec/lab01/.gitignore
@@ -8,3 +8,13 @@
 /lab24_1_TimerTask1.class
 /lab24_1_TimerTask2.class
 /lab24_StringTokenizer.class
+/ex22_5_Calendar.class
+/ex22_6_StringPerformance.class
+/ex23_1_Random.class
+/ex23_2_Scanner.class
+/ex23_3_Wrapper.class
+/ex24_1_TimerEx.class
+/ex24_1_TimerMain.class
+/ex24_1_TimerTask1.class
+/ex24_1_TimerTask2.class
+/ex24_StringTokenizer.class
